cleaning server side list example

--- a/jrocks-springular/springular-frontend/src/app/entity/example/example.component.scss
+++ b/jrocks-springular/springular-frontend/src/app/entity/example/example.component.scss
@@ -1,3 +1,5 @@
+@import "src/variables.scss";
+
 .spinner-container mat-spinner {
   margin: 130px auto 0 auto;
 }
@@ -5,4 +7,7 @@
   height: 60px;
   width: 60px;
   position: fixed;
+}
+.table-action {
+  overflow: initial;
 }
