--- a/jrocks-springular/springular-frontend/src/app/entity/example/example.component.html
+++ b/jrocks-springular/springular-frontend/src/app/entity/example/example.component.html
@@ -1,43 +1,56 @@
-<div class="example">
+<mat-card class="mat-elevation-z8">
 
-  <h2>Example</h2>
+  <mat-card-header>
+    <mat-card-title>Examples</mat-card-title>
+    <mat-card-subtitle>Managing examples</mat-card-subtitle>
+  </mat-card-header>
+  <div class="example">
 
-  <mat-form-field>
-    <input matInput placeholder="Search examples" #input>
-  </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Search examples" #input>
+    </mat-form-field>
 
-  <div class="spinner-container" *ngIf="dataSource.loading$ | async">
-    <mat-spinner></mat-spinner>
+    <div class="spinner-container" *ngIf="dataSource.loading$ | async">
+      <mat-spinner></mat-spinner>
+    </div>
+
+    <div class="mat-elevation-z8">
+
+      <mat-table class="example-table mat-elevation-z3" [dataSource]="dataSource"
+                 matSort matSortActive="username" matSortDirection="asc" matSortDisableClear>
+
+        <ng-container matColumnDef="username">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Username</mat-header-cell>
+          <mat-cell *matCellDef="let example">{{example.username}}</mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="firstname">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Firstname</mat-header-cell>
+          <mat-cell *matCellDef="let example">{{example.firstname}}</mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="lastname">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Lastname</mat-header-cell>
+          <mat-cell *matCellDef="let example">{{example.lastname}}</mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="actions" class="">
+          <mat-header-cell *matHeaderCellDef> Actions</mat-header-cell>
+          <mat-cell class="table-action" *matCellDef="let row">
+            <button mat-icon-button mat-list-icon>
+              <mat-icon class="mat-accent">edit</mat-icon>
+            </button>
+          </mat-cell>
+        </ng-container>
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+
+        <mat-row *matRowDef="let row; columns: displayedColumns"
+                 (mouseover)="highlightedRow = row"
+                 (click)="editExample(row)"></mat-row>
+      </mat-table>
+
+      <mat-paginator [length]="dataSource.numberOfElements$ | async" [pageSize]="3"
+                     [pageSizeOptions]="[3, 5, 10]"></mat-paginator>
+    </div>
   </div>
-
-  <mat-table class="lessons-table mat-elevation-z8" [dataSource]="dataSource"
-             matSort matSortActive="username" matSortDirection="asc" matSortDisableClear>
-
-    <ng-container matColumnDef="username">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Username</mat-header-cell>
-      <mat-cell *matCellDef="let example">{{example.username}}</mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="firstname">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Firstname</mat-header-cell>
-      <mat-cell class="description-cell" *matCellDef="let example">{{example.firstname}}</mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="lastname">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Lastname</mat-header-cell>
-      <mat-cell class="duration-cell" *matCellDef="let example">{{example.lastname}}</mat-cell>
-    </ng-container>
-
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-  </mat-table>
-
-  <mat-paginator [length]="dataSource.numberOfElements$ | async" [pageSize]="3"
-                 [pageSizeOptions]="[3, 5, 10]"></mat-paginator>
-</div>
-
-
-
-
-
-
+</mat-card>
