--- a/jrocks-springular/springular-frontend/src/app/entity/example/example.component.html
+++ b/jrocks-springular/springular-frontend/src/app/entity/example/example.component.html
@@ -1,22 +1,21 @@
-<mat-card class="mat-elevation-z8">
+<mat-card class="example-card mat-elevation-z8">
 
   <mat-card-header>
-    <mat-card-title>Examples</mat-card-title>
+    <mat-card-title>Examples
+    </mat-card-title>
     <mat-card-subtitle>Managing examples</mat-card-subtitle>
   </mat-card-header>
   <div class="example">
 
     <mat-form-field>
-      <input matInput placeholder="Search examples" #input>
+      <input matInput placeholder="Search examples" autocomplete="off" #input>
+      <div class="spinner-container" *ngIf="dataSource.loading$ | async">
+        <mat-spinner [diameter]="20"></mat-spinner>
+      </div>
     </mat-form-field>
-
-    <div class="spinner-container" *ngIf="dataSource.loading$ | async">
-      <mat-spinner></mat-spinner>
-    </div>
-
     <div class="mat-elevation-z8">
 
-      <mat-table class="example-table mat-elevation-z3" [dataSource]="dataSource"
+      <mat-table class="example-table" [dataSource]="dataSource"
                  matSort matSortActive="username" matSortDirection="asc" matSortDisableClear>
 
         <ng-container matColumnDef="username">
@@ -34,11 +33,14 @@
           <mat-cell *matCellDef="let example">{{example.lastname}}</mat-cell>
         </ng-container>
 
-        <ng-container matColumnDef="actions" class="">
+        <ng-container matColumnDef="actions">
           <mat-header-cell *matHeaderCellDef> Actions</mat-header-cell>
-          <mat-cell class="table-action" *matCellDef="let row">
-            <button mat-icon-button mat-list-icon>
+          <mat-cell *matCellDef="let row">
+            <button class="action-button" mat-icon-button mat-list-icon>
               <mat-icon class="mat-accent">edit</mat-icon>
+            </button>
+            <button class="action-button" mat-icon-button mat-list-icon>
+              <mat-icon class="mat-accent">delete</mat-icon>
             </button>
           </mat-cell>
         </ng-container>
@@ -49,8 +51,7 @@
                  (click)="editExample(row)"></mat-row>
       </mat-table>
 
-      <mat-paginator [length]="dataSource.numberOfElements$ | async" [pageSize]="3"
-                     [pageSizeOptions]="[3, 5, 10]"></mat-paginator>
+      <mat-paginator [length]="dataSource.numberOfElements$ | async"  [pageSize]="3" [pageSizeOptions]="[3, 5, 10]"></mat-paginator>
     </div>
   </div>
 </mat-card>
