--- a/jrocks-springular/springular-frontend/src/app/entity/example/example.component.scss
+++ b/jrocks-springular/springular-frontend/src/app/entity/example/example.component.scss
@@ -9,11 +9,12 @@
 
 // actions
 .mat-column-actions {
-  flex: 0 0 100px;
+  flex: 0 0 60px;
 }
 .mat-column-actions > button {
-  padding: 0;
   width: 30px;
+  height: 30px;
+  line-height: 30px;
 }
 
 
