--- a/jrocks-springular/springular-frontend/src/styles.scss
+++ b/jrocks-springular/springular-frontend/src/styles.scss
@@ -1,6 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'default-theme.scss';
+@import "variables.scss";
 
 body {
   margin: 0;
 }
+
+
+.primary-snackbar {
+  background: $primary;
+}
+
+.accent-snackbar {
+  background: $accent;
+}
+
