--- a/jrocks-springular/springular-frontend/src/variables.scss
+++ b/jrocks-springular/springular-frontend/src/variables.scss
@@ -1,12 +1,7 @@
 // Import material theming functions
-@import '~@angular/material/theming';
-
-// Copy the palettes from your selected theme (usually theme.scss).
-$app-primary: mat-palette($mat-grey);
-$app-accent:  mat-palette($mat-light-blue);
-$app-warn:    mat-palette($mat-pink);
+@import "default-theme.scss";
 
 // Create your Sass color vars (will be available in all the project)
-$primary: mat-color($app-primary);
-$accent: mat-color($app-accent);
-$warn: mat-color($app-warn);
+$primary: mat-color($candy-app-primary);
+$accent: mat-color($candy-app-accent);
+$warn: mat-color($candy-app-warn);
