--- a/jrocks-springular/springular-frontend/src/app/component/header/header.component.html
+++ b/jrocks-springular/springular-frontend/src/app/component/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="app-navbar">
+<mat-toolbar color="primary" class="app-navbar mat-elevation-z6">
   <button mat-button mat-ripple routerLink="/">
     <img alt="Angular-Spring-Starter" class="app-angular-logo" src="assets/image/angular-white-transparent.svg">
     <span>Angular-Spring-Starter</span>
