--- a/jrocks-springular/springular-frontend/src/app/entity/example/delete/delete.component.html
+++ b/jrocks-springular/springular-frontend/src/app/entity/example/delete/delete.component.html
@@ -6,7 +6,7 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <button class="mat-raised-button mat-warn" (click)="delete()">Delete</button>
+  <button class="mat-raised-button mat-warn mat-elevation-z6" (click)="delete()">Delete</button>
   <button class="mat-raised-button" (click)="close()">Close</button>
 </mat-dialog-actions>
 
