--- a/jrocks-springular/springular-frontend/src/app/entity/example/example.component.scss
+++ b/jrocks-springular/springular-frontend/src/app/entity/example/example.component.scss
@@ -1,5 +1,27 @@
 @import "src/variables.scss";
 
+.mat-card-header {
+  background: $primary;
+  margin: -16px;
+  color: white;
+}
+
+.mat-card-subtitle {
+  color: white;
+}
+
+.mat-card > :first-child {
+  margin-bottom: 10px;
+  margin-top: -16px;
+  padding-left: 16px;
+  padding-top: 16px;
+  padding-bottom: 1px;
+  transition: box-shadow 280ms cubic-bezier(.4,0,.2,1);
+  display: block;
+  position: relative;
+  border-radius: 4px 4px 0 0;
+}
+
 // spinner
 .spinner-container mat-spinner {
   position: absolute;
@@ -15,4 +37,10 @@
   width: 30px;
   height: 30px;
   line-height: 30px;
+}
+
+.add-button {
+  position: absolute;
+  top: 46px;
+  right: 10px;
 }
