--- a/jrocks-springular/springular-frontend/src/app/entity/example/edit/edit.component.html
+++ b/jrocks-springular/springular-frontend/src/app/entity/example/edit/edit.component.html
@@ -1,7 +1,7 @@
 <h2 mat-dialog-title>{{description}}</h2>
 
 
-<mat-dialog-content [formGroup]="form">
+<mat-dialog-content [formGroup]="form" (keydown.enter)="save()">
   <mat-form-field>
     <input matInput
            placeholder="User name"
@@ -20,8 +20,8 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <button class="mat-elevation-z10 mat-raised-button mat-primary" (click)="save()">Save</button>
-  <button class="mat-raised-button" (click)="close()">Close</button>
+  <button class="mat-raised-button mat-primary" [disabled]="!form.valid" (click)="save()">Save</button>
+  <button class="mat-button" (click)="close()">Close</button>
 </mat-dialog-actions>
 
 
