--- a/jrocks-springular/springular-frontend/src/app/entity/example/example.component.scss
+++ b/jrocks-springular/springular-frontend/src/app/entity/example/example.component.scss
@@ -1,22 +1,18 @@
 @import "src/variables.scss";
 
+// card
 .mat-card-header {
   background: $primary;
   margin: -16px;
   color: white;
 }
-
 .mat-card-subtitle {
   color: white;
 }
-
 .mat-card > :first-child {
   margin-bottom: 10px;
   margin-top: -16px;
-  padding-left: 16px;
-  padding-top: 16px;
-  padding-bottom: 1px;
-  transition: box-shadow 280ms cubic-bezier(.4,0,.2,1);
+  padding: 16px 0 1px 16px;
   display: block;
   position: relative;
   border-radius: 4px 4px 0 0;
@@ -27,6 +23,9 @@
   position: absolute;
   top: 7px;
   right: 10px;
+}
+.mat-spinner::ng-deep circle {
+  stroke: #fff;
 }
 
 // actions
