--- a/jrocks-springular/springular-frontend/src/app/entity/example/delete/delete-example-dialog.component.html
+++ b/jrocks-springular/springular-frontend/src/app/entity/example/delete/delete-example-dialog.component.html
@@ -1,5 +1,4 @@
-<h2 mat-dialog-title>{{description}}</h2>
-
+<h2 mat-dialog-title>Delete Example</h2>
 
 <mat-dialog-content>
   Are you sure to remove {{firstName}} {{lastname}} example with id '{{id}}'?
