--- a/jrocks-springular/springular-frontend/src/app/entity/example/edit/edit.component.html
+++ b/jrocks-springular/springular-frontend/src/app/entity/example/edit/edit.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>{{description}}</h2>
+<h2 mat-dialog-title>Edit Example</h2>
 
 
 <mat-dialog-content [formGroup]="form" (keydown.enter)="save()">
