--- a/jrocks-springular/springular-frontend/src/app/entity/example/new/new.component.html
+++ b/jrocks-springular/springular-frontend/src/app/entity/example/new/new.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>{{description}}</h2>
+<h2 mat-dialog-title>Create a new Example</h2>
 
 
 <mat-dialog-content [formGroup]="form">
