--- a/jrocks-springular/springular-frontend/src/app/entity/example/new/new.component.html
+++ b/jrocks-springular/springular-frontend/src/app/entity/example/new/new.component.html
@@ -20,7 +20,7 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <button class="mat-raised-button mat-primary" (click)="save()">Save</button>
+  <button class="mat-raised-button mat-primary" [disabled]="!form.valid" (click)="save()">Save</button>
   <button class="mat-raised-button" (click)="close()">Close</button>
 </mat-dialog-actions>
 
