--- a/jrocks-springular/springular-frontend/src/app/entity/example/example.component.html
+++ b/jrocks-springular/springular-frontend/src/app/entity/example/example.component.html
@@ -1,65 +1,78 @@
-<mat-card class="example-card mat-elevation-z4">
+<mat-card class="example-card">
 
-  <mat-card-header class="mat-elevation-z2">
-    <mat-card-title>Examples</mat-card-title>
-    <mat-card-subtitle>Managing examples</mat-card-subtitle>
+  <mat-card-header>
+    <mat-card-title>{{title | uppercase}}
+      <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu" xPosition="before">
+        <button mat-menu-item>Expand</button>
+        <button mat-menu-item>Remove</button>
+      </mat-menu>
+    </mat-card-title>
+    <mat-card-subtitle>{{subTitle}}</mat-card-subtitle>
   </mat-card-header>
 
-  <mat-form-field>
-    <input matInput placeholder="Search examples" autocomplete="off" #input>
-  </mat-form-field>
+  <mat-card-content>
 
-  <div class="spinner-container" *ngIf="dataSource.loading$ | async">
-    <mat-spinner [diameter]="20" [color]="white"></mat-spinner>
-  </div>
+    <div class="spinner-container" *ngIf="dataSource.loading$ | async">
+      <mat-spinner [diameter]="20" [color]="white"></mat-spinner>
+    </div>
 
-  <button class="add-button" mat-fab (click)="newExample(row)">
-    <mat-icon>add</mat-icon>
-  </button>
+    <button *ngIf="!readonly" class="add-button mat-elevation-z10" mat-fab (click)="newExample(row)">
+      <mat-icon>add</mat-icon>
+    </button>
 
-  <div class="mat-elevation-z4">
+    <div class="mat-elevation-z4" [@listUpdate]="dataSource.loading$">
+      <mat-form-field *ngIf="!readonly" class="search-input">
+        <input matInput placeholder="Search examples" autocomplete="off" #usernameCriteria>
+      </mat-form-field>
 
-    <mat-table class="example-table" [dataSource]="dataSource"
-               matSort matSortActive="username" matSortDirection="asc" matSortDisableClear>
+      <div class="table-container" [style.min-height]="minHeight" [style.max-height]="maxHeight">
 
-      <ng-container matColumnDef="id">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>ID</mat-header-cell>
-        <mat-cell *matCellDef="let example">{{example.id}}</mat-cell>
-      </ng-container>
+        <mat-table class="example-table" [dataSource]="dataSource"
+                   matSort matSortActive="username" matSortDirection="asc" matSortDisableClear>
 
-      <ng-container matColumnDef="username">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>Username</mat-header-cell>
-        <mat-cell *matCellDef="let example">{{example.username}}</mat-cell>
-      </ng-container>
+          <ng-container matColumnDef="id">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>ID</mat-header-cell>
+            <mat-cell *matCellDef="let example">{{example.id}}</mat-cell>
+          </ng-container>
 
-      <ng-container matColumnDef="firstname">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>Firstname</mat-header-cell>
-        <mat-cell *matCellDef="let example">{{example.firstname}}</mat-cell>
-      </ng-container>
+          <ng-container matColumnDef="username">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Username</mat-header-cell>
+            <mat-cell *matCellDef="let example">{{example.username}}</mat-cell>
+          </ng-container>
 
-      <ng-container matColumnDef="lastname">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>Lastname</mat-header-cell>
-        <mat-cell *matCellDef="let example">{{example.lastname}}</mat-cell>
-      </ng-container>
+          <ng-container matColumnDef="firstname">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Firstname</mat-header-cell>
+            <mat-cell *matCellDef="let example">{{example.firstname}}</mat-cell>
+          </ng-container>
 
-      <ng-container matColumnDef="actions">
-        <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
-        <mat-cell *matCellDef="let row">
-          <button (click)="editExample(row)" class="action-button" mat-icon-button mat-list-icon>
-            <mat-icon class="mat-accent">edit</mat-icon>
-          </button>
-          <button (click)="deleteExample(row)" class="action-button" mat-icon-button mat-list-icon>
-            <mat-icon class="mat-accent">delete</mat-icon>
-          </button>
-        </mat-cell>
-      </ng-container>
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+          <ng-container matColumnDef="lastname">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Lastname</mat-header-cell>
+            <mat-cell *matCellDef="let example">{{example.lastname}}</mat-cell>
+          </ng-container>
 
-      <mat-row *matRowDef="let row; columns: displayedColumns"
-               (mouseover)="highlightedRow = row"
-      ></mat-row>
-    </mat-table>
-    <mat-paginator [length]="dataSource.numberOfElements$ | async" [pageSize]="5"
-                   [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
-  </div>
+          <ng-container *ngIf="!readonly" matColumnDef="actions">
+            <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+            <mat-cell *matCellDef="let row">
+              <button (click)="editExample(row)" class="action-button" mat-icon-button mat-list-icon>
+                <mat-icon class="mat-accent">edit</mat-icon>
+              </button>
+              <button (click)="deleteExample(row)" class="action-button" mat-icon-button mat-list-icon>
+                <mat-icon class="mat-accent">delete</mat-icon>
+              </button>
+            </mat-cell>
+          </ng-container>
+          <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
+
+          <mat-row *matRowDef="let row; columns: displayedColumns"
+                   (mouseover)="highlightedRow = row"
+          ></mat-row>
+        </mat-table>
+      </div>
+      <mat-paginator [length]="dataSource.numberOfElements$ | async" [pageSize]="pageSize"
+                     [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
+    </div>
+  </mat-card-content>
 </mat-card>
