list without form

--- a/jrocks-springular/springular-frontend/src/variables.scss
+++ b/jrocks-springular/springular-frontend/src/variables.scss
@@ -3,5 +3,7 @@
 
 // Create your Sass color vars (will be available in all the project)
 $primary: mat-color($candy-app-primary);
+$primary-light: mat-color($candy-app-primary-light);
+
 $accent: mat-color($candy-app-accent);
 $warn: mat-color($candy-app-warn);
