--- a/jrocks-springular/springular-frontend/src/app/entity/datatable-example/example.component.html
+++ b/jrocks-springular/springular-frontend/src/app/entity/datatable-example/example.component.html
@@ -25,7 +25,7 @@
 
     <div class="mat-elevation-z4" [@listUpdate]="dataSource.loading$">
       <mat-form-field *ngIf="!readonly" class="search-input">
-        <input matInput placeholder="Search examples" autocomplete="off" #usernameCriteria>
+        <input matInput placeholder="Search examples" autocomplete="off" #filter>
       </mat-form-field>
 
       <div class="table-container" [style.min-height]="minHeight" [style.max-height]="maxHeight">
