--- a/jrocks-springular/springular-frontend/src/default-theme.scss
+++ b/jrocks-springular/springular-frontend/src/default-theme.scss
@@ -10,6 +10,8 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $candy-app-primary: mat-palette($mat-indigo, 700);
+$candy-app-primary-light: mat-palette($mat-indigo, 50, A200);
+
 $candy-app-accent:  mat-palette($mat-pink, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
