--- a/jrocks-springular/springular-frontend/src/styles.scss
+++ b/jrocks-springular/springular-frontend/src/styles.scss
@@ -2,6 +2,8 @@
 @import 'default-theme.scss';
 @import "variables.scss";
 
+@import '../node_modules/bootstrap/scss/bootstrap-grid';
+
 body {
   margin: 0;
 }
