--- a/jrocks-springular/springular-frontend/src/app/entity/datatable-example/example.component.html
+++ b/jrocks-springular/springular-frontend/src/app/entity/datatable-example/example.component.html
@@ -23,7 +23,7 @@
       <mat-icon>add</mat-icon>
     </button>
 
-    <div class="mat-elevation-z4" [@listUpdate]="dataSource.loading$">
+    <div class="mat-elevation-z4">
       <mat-form-field *ngIf="!readonly" class="search-input">
         <input matInput placeholder="Search examples" autocomplete="off" #filter>
       </mat-form-field>
