--- a/jrocks-springular/springular-frontend/src/app/entity/datatable-example/new/new-example-dialog.component.html
+++ b/jrocks-springular/springular-frontend/src/app/entity/datatable-example/new/new-example-dialog.component.html
@@ -1,4 +1,6 @@
-<mat-dialog-content [formGroup]="form">
+<h2>Add new Example</h2>
+
+<mat-dialog-content [formGroup]="form" class="dialog-container">
   <mat-form-field>
     <input matInput
            placeholder="User name"
