--- a/jrocks-springular/springular-frontend/src/app/entity/datatable-example/edit/edit-example-dialog.component.html
+++ b/jrocks-springular/springular-frontend/src/app/entity/datatable-example/edit/edit-example-dialog.component.html
@@ -1,18 +1,19 @@
-<mat-dialog-content [formGroup]="form" (keydown.enter)="save()">
-  <mat-form-field>
-    <input matInput placeholder="User name" formControlName="username">
-  </mat-form-field>
-  <mat-form-field>
-    <input matInput placeholder="Fistname" formControlName="firstname">
-  </mat-form-field>
-  <mat-form-field>
-    <input matInput placeholder="Lastname" formControlName="lastname">
-  </mat-form-field>
-</mat-dialog-content>
+<form [formGroup]="form" (ngSubmit)="save()">
+  <mat-dialog-content>
+    <mat-form-field>
+      <input matInput placeholder="User name" formControlName="username">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Fistname" formControlName="firstname">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Lastname" formControlName="lastname">
+    </mat-form-field>
+  </mat-dialog-content>
 
-<mat-dialog-actions>
-  <button class="mat-raised-button mat-primary" [disabled]="!form.valid" (click)="save()">Save</button>
-  <button class="mat-button" (click)="close()">Close</button>
-</mat-dialog-actions>
-
+  <mat-dialog-actions>
+    <button type="submit" class="mat-raised-button mat-primary" [disabled]="!form.valid">Save</button>
+    <button class="mat-button" (click)="close()">Close</button>
+  </mat-dialog-actions>
+</form>
 
