--- a/jrocks-springular/springular-frontend/src/app/entity/datatable-example/example.component.html
+++ b/jrocks-springular/springular-frontend/src/app/entity/datatable-example/example.component.html
@@ -14,7 +14,6 @@
   </mat-card-header>
 
   <mat-card-content>
-
     <div class="spinner-container" *ngIf="dataSource.loading$ | async">
       <mat-spinner [diameter]="20" [color]="white"></mat-spinner>
     </div>
@@ -24,9 +23,22 @@
     </button>
 
     <div class="mat-elevation-z4">
+<!--
       <mat-form-field *ngIf="!readonly" class="search-input">
         <input matInput placeholder="Search examples" autocomplete="off" #filter>
       </mat-form-field>
+-->
+
+      <form class="example-form">
+        <mat-form-field class="search-input">
+          <input type="text" *ngIf="!readonly" placeholder="Search Examples" aria-label="Number" matInput #filter [matAutocomplete]="auto">
+          <mat-autocomplete #auto="matAutocomplete">
+            <mat-option *ngFor="let field of filterStates | async" [value]="val">
+              {{field}}:{{filter}}
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
+      </form>
 
       <div class="table-container" [style.min-height]="minHeight" [style.max-height]="maxHeight">
 
