--- a/jrocks-springular/springular-frontend/src/app/entity/datatable-example/delete/delete-example-dialog.component.html
+++ b/jrocks-springular/springular-frontend/src/app/entity/datatable-example/delete/delete-example-dialog.component.html
@@ -1,5 +1,5 @@
 <mat-dialog-content>
-  Are you sure to remove {{firstName}} {{lastname}} example with id '{{id}}'?
+  Are you sure to remove {{firstname}} {{lastname}} example with id '{{id}}'?
 </mat-dialog-content>
 
 <mat-dialog-actions>
