--- a/jrocks-springular/springular-frontend/src/app/entity/list-example/example-list.component.html
+++ b/jrocks-springular/springular-frontend/src/app/entity/list-example/example-list.component.html
@@ -2,7 +2,7 @@
   <h1>{{title | uppercase}}</h1>
   <div class="row">
     <div class="col-md-5">
-      <mat-form-field *ngIf="!readonly" class="search-input">
+      <mat-form-field class="search-input">
         <input matInput placeholder="Search examples" autocomplete="off" #filter>
       </mat-form-field>
       <div class="">
