--- a/jrocks-plugin-springular/src/main/java/jrocks/plugin/springular/templates/frontend/entity/datatable/newDialog/newDialogComponent.rocker.html
+++ b/jrocks-plugin-springular/src/main/java/jrocks/plugin/springular/templates/frontend/entity/datatable/newDialog/newDialogComponent.rocker.html
@@ -9,21 +9,12 @@
 <h2>Add new @bean.simpleName()</h2>
 
 <mat-dialog-content [formGroup]="form" class="dialog-container">
+  @for (FieldApi f : bean.fields()) {
   <mat-form-field>
-    <input matInput
-           placeholder="User name"
-           formControlName="username">
+    <input matInput placeholder="@f.placeholder()" formControlName="@f.fieldName()">
   </mat-form-field>
-  <mat-form-field>
-    <input matInput
-           placeholder="Fistname"
-           formControlName="firstname">
-  </mat-form-field>
-  <mat-form-field>
-    <input matInput
-           placeholder="Lastname"
-           formControlName="lastname">
-  </mat-form-field>
+
+  }
 </mat-dialog-content>
 
 <mat-dialog-actions>
